# yolov8-trt-cpp

./: .gitignore  README.md  build.py
csrc/detect/end2end/: CMakeLists.txt  main.cpp  main_normal.cpp  postprocess.cu  preprocess.cu
csrc/detect/end2end/cmake/: FindTensorRT.cmake
csrc/detect/end2end/include/: postprocess.h  preprocess.h  yolov8.hpp
models/: calibrator.py  engine.py
